--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,17 +3,49 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+    background-color:#0077b6;
+}
 nav a{
     text-align: center;
     color:#caf0f8;
     text-decoration: none;
     padding: 35px;
 }
+nav a:hover {    
+    background-color:#00b4d8;
+}
+nav {    
+    display: flex;
+    justify-content: space-around;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #hero-msg h1{
     text-align: center;
+    color:#caf0f8;
 }
 #hero-msg h4{
     text-align: center;
+    color:#caf0f8;
+}
+#hero-img {
+    width: 100%;
 }
 .button-box{
     text-align: center;
@@ -24,16 +56,73 @@ main{
 main section img {
     box-sizing: border-box;
 }
-.mountains{
-    margin-right: 2000px;
-    padding: 50px 0px 200px;
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-section{
-    text-align: center;
+.home-title{
+    color:#0077b6;
+    font-size: 2em;
+    margin-top: 10px;
+}
+.card-img{
+    border: 10px solid #0077b6;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
 #background {
     height: 725px;
-    background-color:#caf0f8;;
+    background-color:#caf0f8;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains{    
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg{    
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    background-color:#0077b6;
+    box-shadow: 5px 5px 10px #6f7364;
+    
+}
+.msg h2{
+    color:#caf0f8;
+}
+.msg p{
+    color:#caf0f8;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+section{
+    text-align: center;
 }
 body{
     background-color:white;
@@ -41,12 +130,6 @@ body{
     font-size: 22px;
     margin: 0;
     padding: 0;
-}
-header {
-    background-color:#0077b6;
-}
-nav a:hover {
-    background-color:#00b4d8;
 }
 .book, .join{
     background-color:#90e0ef;
@@ -60,30 +143,14 @@ nav a:hover {
 .book:hover, .join:hover{
     background-color:#00b4d8;
 }
-.rivers-card, .camping-card, .rapids-card {
-    margin: 200px 0;
-}
-.card-img{
-    border: 10px solid #0077b6;
-}
-.msg{
-    background-color:#caf0f8;
-    line-height: 1.5em;
-    padding: 35px;
-}
-.msg h2{
-    color:#0077b6;
-}
-.msg p{
-    color:#0077b6;
-    font-size: .8em;
-    padding-bottom: 15px;
-}
 footer{
     background-color:#0077b6;
     color:#caf0f8;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color:#caf0f8;
@@ -101,11 +168,6 @@ footer p a:hover {
 footer .social img{
     padding-top: 15px;
 }
-.home-title{
-    color:#0077b6;
-    font-size: 2em;
-    margin-top: 10px;
-}
 h4{
     color:#0077b6;
 }
@@ -120,12 +182,53 @@ h2 {
 }
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon{
     width: 80px;
     padding-top: 10px;
 }
-#hero-img {
-    width: 100%;
-}
 
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+   
