--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -190,6 +190,63 @@ h2 {
     padding-top: 10px;
 }
 
+/* RIVERS PAGE */
+.rivers-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.salmon-river-msg, .desolation-canyon-msg, .grand-canyon-aizona-msg {
+    padding: 50px;
+    text-align: left;
+}
+.salmon-river-msg{
+    grid-column: 1/4;
+    grid-row: 1/3; 
+}
+.salmon-river-card {
+    grid-column: 4/7;
+    grid-row: 1/3;
+    padding: 20px
+}
+.desolation-canyon-card {
+    grid-column: 1/4;
+    grid-row: 3/5;
+    padding: 20px
+}
+.desolation-canyon-msg {
+    grid-column: 4/7;
+    grid-row: 3/5; 
+}
+.grand-canyon-aizona-msg {
+    grid-column: 1/4;
+    grid-row: 5/7;
+}
+.grand-canyon-aizona-card {
+    grid-column: 4/7;
+    grid-row: 5/7;
+    padding: 20px
+}
+.river-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+.river-img {
+    width: 100%;
+    height: 100%;
+    border: 10px solid #0077b6;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.river-msg {
+    background-color:#caf0f8;
+    grid-column: 1/7;
+    grid-row: 7/8;
+    padding: 50px;
+    margin-top: 100px;
+    color: #0077b6;
+    font-family: "Carter One", Georgia;
+}
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
@@ -215,7 +272,7 @@ h2 {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+    .rivers-card, .camping-card, .rapids-card  { 
         margin: 50px auto;
         width: 60%;
     }
