--- a/dpad/styles/style.css
+++ b/dpad/styles/style.css
@@ -5,12 +5,12 @@
 }
 header {
     display: grid;
-    grid-template-columns: 150px 1fr 1fr 1fr;
+    grid-template-columns: 150px 1fr 1fr 1fr 15px;
     grid-template-rows: 10% 30% 50% 10%;
     background-color:#0077b6;  
 }
 nav a{
-    text-align: center;
+    text-align: right;
     color:#caf0f8;
     text-decoration: none;
     padding: 35px;    
@@ -19,10 +19,10 @@ nav a:hover {
     background-color:#00b4d8;
 }
 nav {    
-    display: flex;
-    justify-content: space-around;    
+    display: flex;  
     grid-column: 3/5;
     grid-row: 3/4;
+    justify-content: right;          
 }
 #hero {
     display: grid;
@@ -51,7 +51,8 @@ nav {
 .order-online-button {
     text-align: right;
     grid-column: 4/5;
-    grid-row: 2/3;    
+    grid-row: 2/3; 
+    height: 100%;   
 }
 .button-box{
     text-align: center;
@@ -69,6 +70,7 @@ main section img {
 .home-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 10% 28% 28% 5% 10% 19%;
 }
 .home-title{
     color:#0077b6;
@@ -88,7 +90,7 @@ main section img {
     width: 100%;
 }
 .nutrition-benefits{
-    grid-column: 1/10;
+    grid-column: 1/11;
     grid-row: 1/1;
 }
 .cultures-card {
@@ -113,36 +115,55 @@ main section img {
 }
 .smackdown{    
     grid-column: 1/11;
-    grid-row: 4/6;
-}
-.smackdown_header{
-    grid-column: 1/11;
-    grid-row: 3/4;
+    grid-row: 4/7;
 }
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
 #background {
-    height: 725px;
+    height: 100%;
     background-color:#caf0f8;
-    grid-column: 1/11;
-    grid-row: 4/9;
 }
 
-.smackdown_message{    
-    padding: 150px;
-    grid-column: 1/1;
-    grid-row: 6/10;
-    background-color:#0077b6;    
+.smackdown_message1{        
+    padding: 15px;
+    grid-column: 2/4;
+    grid-row: 5/6;
+    background-color:#0077b6; 
+}
+.smackdown_message2{        
+    padding: 15px;
+    grid-column: 5/7;
+    grid-row: 5/6;
+    background-color:#0077b6;        
+}
+.smackdown_message3{
+    padding: 15px;
+    grid-column: 8/10;
+    grid-row: 5/6;
+    background-color:#0077b6;        
+}
+.smackdown_text{
+    color:#caf0f8;      
 }
 .smackdown_message h2{
-    color:#caf0f8;
+    color:#caf0f8;    
 }
 .smackdown_message p{
     color:#caf0f8;
     font-size: .8em;
     padding-bottom: 15px;
 }
+.smackdown_image{
+    grid-column: 4/8;
+    grid-row: 6/7;
+    padding: 30px;    
+}
+.smackdown_image  img{    
+    width: 100%; 
+    height: 100%;
+}
+
 section{
     text-align: center;
 }
@@ -153,15 +174,16 @@ body{
     margin: 0;
     padding: 0;
 }
-.book, .join{
+.book, .join, .order-online{
     background-color:#90e0ef;
     color:#0077b6;
     text-decoration: none;
     font-size: 18px;
-    padding: 15px 30px;
+    padding: 10px 15px;
     margin-top: 50px;
     border-radius: 5px;
 }
+
 .book:hover, .join:hover{
     background-color:#00b4d8;
 }
