--- a/dpad/styles/style.css
+++ b/dpad/styles/style.css
@@ -69,8 +69,9 @@ main section img {
 }
 .home-grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 10% 28% 28% 5% 10% 19%;
+    grid-template-columns: 7% 3% 10% 12% 7% 11% 11% 7% 12% 10% 3% 7%;
+    grid-template-rows: 10% 22% 25% 5% 1% 10% 1% 20%;
+    color:#0077b6;
 }
 .home-title{
     color:#0077b6;
@@ -90,58 +91,74 @@ main section img {
     width: 100%;
 }
 .nutrition-benefits{
-    grid-column: 1/11;
-    grid-row: 1/1;
+    grid-column: 1/13;
+    grid-row: 1/1;    
 }
 .cultures-card {
-    grid-column: 2/4;
+    grid-column: 3/5;
     grid-row: 2/3;
 }
 .lactose-card {
-    grid-column: 5/7;
+    grid-column: 6/8;
     grid-row: 2/3;
 }
 .gluten-card {
-    grid-column: 8/10;
+    grid-column: 9/11;
     grid-row: 2/3;
 }
 .protein-card {
-    grid-column: 3/5;
+    grid-column: 4/6;
     grid-row: 3/3;
 }
 .calcium-card {
-    grid-column: 7/9;
+    grid-column: 8/10;
     grid-row: 3/3;
 }
-.smackdown{    
-    grid-column: 1/11;
-    grid-row: 4/7;
+.smackdown1{    
+    grid-column: 1/13;
+    grid-row: 4/9;
+}
+.smackdown2{    
+    grid-column: 2/12;
+    grid-row: 5/8;
+}
+.smackdown-header{    
+    grid-column: 4/10;
+    grid-row: 4/5;
+    padding: 15px;
 }
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
-#background {
+#background1 {
     height: 100%;
     background-color:#caf0f8;
 }
-
+#background2 {
+    height: 100%;
+    background-color:white;
+    border-radius: 10px;     
+}
 .smackdown_message1{        
     padding: 15px;
-    grid-column: 2/4;
-    grid-row: 5/6;
-    background-color:#0077b6; 
+    grid-column: 3/5;
+    grid-row: 6/7;
+    background-color:#0077b6;
+    border-radius: 10px; 
 }
 .smackdown_message2{        
     padding: 15px;
-    grid-column: 5/7;
-    grid-row: 5/6;
-    background-color:#0077b6;        
+    grid-column: 6/8;
+    grid-row: 6/7;
+    background-color:#0077b6;
+    border-radius: 10px; 
 }
 .smackdown_message3{
     padding: 15px;
-    grid-column: 8/10;
-    grid-row: 5/6;
-    background-color:#0077b6;        
+    grid-column: 9/11;
+    grid-row: 6/7;
+    background-color:#0077b6;
+    border-radius: 10px; 
 }
 .smackdown_text{
     color:#caf0f8;      
@@ -155,9 +172,9 @@ main section img {
     padding-bottom: 15px;
 }
 .smackdown_image{
-    grid-column: 4/8;
-    grid-row: 6/7;
-    padding: 30px;    
+    grid-column: 4/10;
+    grid-row: 8/9;
+    padding: 30px 0px;    
 }
 .smackdown_image  img{    
     width: 100%; 
@@ -191,7 +208,6 @@ footer{
     background-color:#0077b6;
     color:#caf0f8;
     padding: 25px 50px;
-    margin-top: 200px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -220,6 +236,12 @@ h1{
 }
 h2 {
     margin: 0;
+    font-family: "Carter One", Georgia;
+    color:#0077b6;
+}
+h3 {
+    color:#0077b6;
+    font-weight: bold;
 }
 .logo{
     width: 115px;
@@ -353,9 +375,6 @@ h2 {
     }
     #background {
         display: none;
-    }
-    footer {
-        margin-top: 25px;
-    }
+    }  
 }
    
