--- a/dpad/styles/style.css
+++ b/dpad/styles/style.css
@@ -354,6 +354,12 @@ h3 {
 
 
 /* PRODUCTS */
+.products-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 5% 40% 40% 5%;
+    color:#0077b6;
+}
 #products {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -382,7 +388,29 @@ h3 {
     width: 100%;
     height: 100%;
 }
-
+.chocolate-card {
+    grid-column: 1/7;
+    grid-row: 2/3;
+}
+.coconut-card {
+    grid-column: 7/13;
+    grid-row: 2/3;
+}
+.greek-honey-card {
+    grid-column: 1/7;
+    grid-row: 3/4;
+}
+.peanut-butter-card {
+    grid-column: 7/13;
+    grid-row: 3/4;
+}
+.product-card-img{
+    border: 5px solid #0077b6;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+    height:75%;
+    width: 70%;
+}
 /* RECIPES */
 
 #recipes {
