--- a/dpad/styles/style.css
+++ b/dpad/styles/style.css
@@ -432,21 +432,133 @@ h3 {
     text-align: center;
     color:#caf0f8;
 }
-#recipes-img {
-    display: block;
+#recipes-img {    
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
     height: 100%;
 }
-.recipes-grid{
+.recipe-list{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    border: 3px solid #0077b6;
+    border-radius: 10px;
+    margin: 0.2rem;
+    background-color: #caf0f8;
 }
-.strawberry-parfait-card {
-    grid-column: 1/10;
+#recipe-name1 {
+    grid-column: 1/8;
+    grid-row: 1/2;
+    text-align: left;
+    padding-left: 0.8rem;
+}
+#recipe-ingredient1 {
+    grid-column: 1/4;
     grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
 }
+#ulist1{
+    grid-column: 1/4;
+    grid-row: 3/7;
+    font-size: 18px;
+    text-align: left;
+}
+#steps1{
+    grid-column: 5/8;
+    grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
+}
+#olist1{
+    grid-column: 5/8;
+    grid-row: 3/9;
+    font-size: 18px;
+    text-align: left;
+}
+#recipe-img1{
+    grid-column: 9/13;
+    grid-row: 3/10;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+#recipe-name2{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    text-align: left;
+    padding-left: 0.8rem;
+}
+#recipe-ingredient2{
+    grid-column: 1/4;
+    grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
+}
+#ulist2{
+    grid-column: 1/4;
+    grid-row: 3/7;
+    font-size: 18px;
+    text-align: left;
+}
+#steps2{
+    grid-column: 5/8;
+    grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
+}
+#olist2{
+    grid-column: 5/8;
+    grid-row: 3/7;
+    font-size: 18px;
+    text-align: left;
+}
+#recipe-img2{
+    grid-column: 9/13;
+    grid-row: 3/10;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+#recipe-name3{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    text-align: left;
+    padding-left: 0.8rem;
+}
+#recipe-ingredient3{
+    grid-column: 1/4;
+    grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
+}
+#ulist3{
+    grid-column: 1/4;
+    grid-row: 3/7;
+    font-size: 18px;
+    text-align: left;
+}
+#steps3{
+    grid-column: 5/8;
+    grid-row: 2/3;
+    text-align: left;
+    padding-left: 1rem;
+}
+#olist3{
+    grid-column: 5/8;
+    grid-row: 3/7;
+    font-size: 18px;
+    text-align: left;
+}
+#recipe-img3{
+    grid-column: 9/13;
+    grid-row: 3/10;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+}
+
 .sweet-summer-smoothie-card {
     grid-column: 1/10;
     grid-row: 3/4;
