--- a/dpad/styles/style.css
+++ b/dpad/styles/style.css
@@ -441,7 +441,7 @@ h3 {
 .recipe-list{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px;
     border: 3px solid #0077b6;
     border-radius: 10px;
     margin: 0.2rem;
